# mdbx-derive

./: Cargo.toml  Readme.md
.github/workflows/: ci.yaml
crates/mdbx-derive/: Cargo.toml
crates/mdbx-derive-macros/: Cargo.toml
crates/mdbx-derive-macros/src/: lib.rs
crates/mdbx-derive-tests/: Cargo.toml
crates/mdbx-derive-tests/src/: lib.rs
crates/mdbx-derive-traits/: Cargo.toml
crates/mdbx-derive-traits/src/: alloy.rs  error.rs  key.rs  lib.rs  orm.rs  table.rs
crates/mdbx-derive/src/: lib.rs
