[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "GPL-2.0-only"
readme = "Readme.md"
description = "poorman MDBX orm"
homepage = "https://github.com/wtdcode/mdbx-derive"
repository = "https://github.com/wtdcode/mdbx-derive"

[workspace.dependencies]
syn = {version = "2.0"}
quote = {version = "1.0"}
proc-macro2 = {version = "1.0"}
zstd = {version = "0" }
alloy-primitives = "1.6"
thiserror = "2.0.18"
serde = "1.0"
itertools = { version = "0.14"}
serde_json = {version = "1.0"}
postcard = {version = "1.1", features = ["alloc"]}
bcs = "0.2.1"
libmdbx-remote = "0.4.5"
simd-json = { version = "0.17" }
tuple_list = "0.1.3"
typeid = "1.0.3"
paste = "1.0.15"
heck = "0.5.0"

mdbx-derive = {version = "0.7.1", default-features = false, path = "crates/mdbx-derive"}
mdbx-derive-traits = {version = "0.7.1", default-features = false, path = "crates/mdbx-derive-traits"}
mdbx-derive-macros = {version = "0.7.1", default-features = false, path = "crates/mdbx-derive-macros"}
mdbx-derive-tests = {version = "0.7.1", default-features = false, path = "crates/mdbx-derive-tests"}
