[package]
name = "mdbx-derive-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
heck.workspace = true
[features]
default = ["json"]
json = []

[lib]
proc-macro = true