[package]
name = "mdbx-derive-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
bincode.workspace = true
mdbx-derive.workspace = true