[package]
name = "mdbx-derive-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
bincode.workspace = true
mdbx-derive.workspace = true

[features]
default = ["serde_json", "bcs"]
bcs = ["mdbx-derive/bcs"]
simd-json = ["mdbx-derive/simd-json"]
serde_json = ["mdbx-derive/serde_json"]