[package]
name = "mdbx-derive-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["alloy"]
alloy = ["alloy-primitives"]

[dependencies]
alloy-primitives = {version = "0.8", optional = true}
thiserror.workspace = true
serde_json.workspace = true
zstd.workspace = true
bincode.workspace = true