[package]
name = "mdbx-derive-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["alloy", "serde_json"]
alloy = ["alloy-primitives"]
mdbx = ["dep:libmdbx-remote"]

[dependencies]
alloy-primitives = {version = "1.6", optional = true}
thiserror.workspace = true
zstd.workspace = true
postcard.workspace = true
libmdbx-remote = {workspace = true, optional = true}
bcs.workspace = true
serde_json = {workspace = true, optional = true}
simd-json = {workspace = true, features = ["serde_impl"], optional = true}
tuple_list = {workspace = true}
typeid = {workspace = true}
