[package]
name = "mdbx-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
mdbx-derive-traits.workspace = true
mdbx-derive-macros.workspace = true
zstd.workspace = true
serde_json.workspace = true
bincode.workspace = true