[package]
name = "mdbx-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
mdbx-derive-traits.workspace = true
mdbx-derive-macros.workspace = true
zstd.workspace = true
bincode.workspace = true
libmdbx-remote.workspace = true
serde_json = {workspace = true, optional = true}
simd-json = {workspace = true, features = ["serde_impl"], optional = true}

[features]
default = ["simd-json"]